Logo and text moving scroll added in dashboard

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -4,3 +4,13 @@
 .btn-space {
     margin-right: 5px;
 }
+.space {
+    margin-right: 10px;
+}
+img {
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+}
