--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Arundeva App</span>
+
+    <img class="space" src="../../assets/images/arundeva4.jpg" title="Arundeva" alt="Arundeva Nandy">
+    <span  >Arundeva Nandy App </span>
     <span class="example-fill-remaining-space"></span>
     <span class="align-center"></span>
     <span class="example-spacer"></span>
@@ -28,3 +30,7 @@
     </mat-menu>
   </mat-toolbar-row>
 </mat-toolbar>
+
+<ng-marquee>
+  <h1><mark>Welcome To Our App <a href="https://www.adsmartvision.com" target="__blank"> https://www.adsmartvision.com/ (ArundevaNandy)</a></mark></h1>
+</ng-marquee>
