--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,16 @@
     flex: 1 1 auto;
 }
 
+.btn-space {
+    margin-right: 5px;
+}
+.space {
+    margin-right: 10px;
+}
+img {
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+}
