--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,14 +1,11 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Arundeva App</span>
+    <img class="space" src="../../assets/images/arundeva4.jpg" title="Arundeva" alt="Arundeva Nandy">
+    <span>Arundeva Nandy App</span>
     <span class="example-fill-remaining-space"></span>
     <span class="align-center"></span>
     <span class="example-spacer"></span>
 
-    <!--<button mat-raised-button class="btn-space">Sign Up </button>
-    <button mat-raised-button class="btn-space">Sign In</button>
-    <button mat-raised-button class="btn-space">About</button>
-    <button mat-raised-button class="btn-space">Contact</button>-->
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
